unpackaged/main/default/objects/GBS_Flow_Document_Setting__mdt/GBS_Flow_Document_Setting__mdt.object-meta.xml
<CustomObject>
    <label>GBS Flow Document Setting</label>
    <pluralLabel>GBS Flow Document Settings</pluralLabel>
</CustomObject>