unpackaged/main/default/objects/GBS_Flow_Document_Setting__mdt/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <label>Business Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
                <default>true</default>
                <label>HR</label>
            </value>
            <value>
                <fullName>GMDM</fullName>
            </value>
            <value>
                <fullName>PTP</fullName>
            </value>
            <value>
                <fullName>RTR</fullName>
            </value>
            <value>
                <fullName>TE</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>