unpackaged/main/default/objects/GBS_Flow_Document_Setting__mdt/fields/Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Text__c</fullName>
    <description>The text that will display for the link</description>
    <label>Display Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>